samples/negative/07_include_cycle.pas
program n07;
(* $I samples/negative/cycle_a.inc *)
begin
end.
